--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -478,6 +478,8 @@ if(ENABLE_CONAN)
     GENERATORS cmake_find_package
     KEEP_RPATHS
     NO_OUTPUT_DIRS
+    OPTIONS tbb:tbbmalloc=True
+            tbb:tbbproxy=True
   )
 
   add_dependency_includes(${CONAN_INCLUDE_DIRS_BOOST})
