--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Enable Conan cache
       uses: actions/cache@v2
       with:
-        path: C:\conan
+        path: C:\Users\runneradmin\.conan\
         key: conan-${{ matrix.name }}-${{ github.sha }}
         restore-keys: |
           conan-${{ matrix.name }}-
