--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -450,7 +450,7 @@ add_subdirectory(${FLATBUFFERS_SRC_DIR}
 
 if(ENABLE_CONAN)
   add_definitions(-DBOOST_ALL_NO_LIB)
-  add_definitions(-D__TBB_NO_IMPLICIT_LINKAGE=1)
+  #add_definitions(-D__TBB_NO_IMPLICIT_LINKAGE=1)
   message(STATUS "Installing dependencies via Conan")
 
   # Conan will generate Find*.cmake files to build directory, so we use them with the highest priority 
