--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -44,7 +44,7 @@ jobs:
     - uses: microsoft/setup-msbuild@v1.1
     - name: Build
       run: |
-        ./appveyor-build.bat
+        .\scripts\ci\windows-build.bat
 
   # format-taginfo-docs:
   #   runs-on: ubuntu-20.04
