--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -447,10 +447,11 @@ add_subdirectory(${FLATBUFFERS_SRC_DIR}
         ${CMAKE_CURRENT_BINARY_DIR}/flatbuffers-build
         EXCLUDE_FROM_ALL)
 
+if (MSVC)
+add_definitions(-DBOOST_ALL_NO_LIB)
+endif()
 
 if(ENABLE_CONAN)
-  add_definitions(-DBOOST_ALL_NO_LIB)
-  #add_definitions(-D__TBB_NO_IMPLICIT_LINKAGE=1)
   message(STATUS "Installing dependencies via Conan")
 
   # Conan will generate Find*.cmake files to build directory, so we use them with the highest priority 
@@ -478,7 +479,7 @@ if(ENABLE_CONAN)
     GENERATORS cmake_find_package
     KEEP_RPATHS
     NO_OUTPUT_DIRS
-    OPTIONS tbb:shared=False
+    OPTIONS tbb:shared=$<IF:MSVC,False,True>
   )
 
   add_dependency_includes(${CONAN_INCLUDE_DIRS_BOOST})
