Migrate Windows CI to GitHub Actions.

--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -21,17 +21,18 @@ env:
 
 jobs:
   windows:
+    needs: format-taginfo-docs
     runs-on: windows-2022
     continue-on-error: false
     steps:
     - uses: actions/checkout@v3
-    # - name: Enable Conan cache
-    #   uses: actions/cache@v2
-    #   with:
-    #     path: C:\Users\runneradmin\.conan\
-    #     key: conan-${{ matrix.name }}-${{ github.sha }}
-    #     restore-keys: |
-    #       conan-${{ matrix.name }}-
+    - name: Enable Conan cache
+      uses: actions/cache@v2
+      with:
+        path: C:\Users\runneradmin\.conan\
+        key: conan-${{ matrix.name }}-${{ github.sha }}
+        restore-keys: |
+          conan-${{ matrix.name }}-
     - run: pip install conan==1.50.0
     - run: conan --version
     - run: cmake --version
