--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -57,7 +57,17 @@ jobs:
         uses: actions/checkout@v3
       - name: Docker build
         run: |
-          docker build -f docker/Dockerfile . 
+          docker build -t osrm-backend-local -f docker/Dockerfile . 
+      - name: Test Docker image
+        run: |
+          wget http://download.geofabrik.de/europe/germany/berlin-latest.osm.pbf
+          docker run -t -v "${PWD}:/data" osrm-backend-local osrm-extract -p /opt/car.lua /data/berlin-latest.osm.pbf
+          docker run -t -v "${PWD}:/data" osrm-backend-local osrm-partition /data/berlin-latest.osrm
+          docker run -t -v "${PWD}:/data" osrm-backend-local osrm-customize /data/berlin-latest.osrm
+          docker run -t -i -p 5000:5000 -v "${PWD}:/data" osrm/osrm-backend osrm-routed --algorithm mld /data/berlin-latest.osrm &
+          PID=$!
+          curl "http://127.0.0.1:5000/route/v1/driving/13.388860,52.517037;13.385983,52.496891?steps=true"
+          kill $PID
 
   build-test-publish:
     needs: format-taginfo-docs
