--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -70,10 +70,11 @@ jobs:
           if [ ! -f "${PWD}/berlin-latest.osm.pbf" ]; then
             wget http://download.geofabrik.de/europe/germany/berlin-latest.osm.pbf
           fi
-          docker run -t -v "${PWD}:/data" osrm-backend-local osrm-extract -p /opt/car.lua /data/berlin-latest.osm.pbf
-          docker run -t -v "${PWD}:/data" osrm-backend-local osrm-partition /data/berlin-latest.osrm
-          docker run -t -v "${PWD}:/data" osrm-backend-local osrm-customize /data/berlin-latest.osrm
-          docker run -t -i -p 5000:5000 -v "${PWD}:/data" osrm/osrm-backend osrm-routed --algorithm mld /data/berlin-latest.osrm &
+          TAG=osrm-backend-local
+          docker run -t -v "${PWD}:/data" "${TAG}" osrm-extract -p /opt/car.lua /data/berlin-latest.osm.pbf
+          docker run -t -v "${PWD}:/data" "${TAG}" osrm-partition /data/berlin-latest.osrm
+          docker run -t -v "${PWD}:/data" "${TAG}" osrm-customize /data/berlin-latest.osrm
+          docker run -t -p 5000:5000 -v "${PWD}:/data" "${TAG}" osrm-routed --algorithm mld /data/berlin-latest.osrm &
           PID=$!
           curl --max-time 5 --retry 10 "http://127.0.0.1:5000/route/v1/driving/13.388860,52.517037;13.385983,52.496891?steps=true"
           kill $PID
