--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -444,9 +444,9 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.conan
-        key: conan-${{ matrix.name }}-${{ github.sha }}
+        key: v2-conan-${{ matrix.name }}-${{ github.sha }}
         restore-keys: |
-          conan-${{ matrix.name }}-
+          v2-conan-${{ matrix.name }}-
     - name: Enable test cache
       uses: actions/cache@v2
       with:
