Build Node bindings on Windows

--- a/scripts/ci/threadsanitizer.conf
+++ b/scripts/ci/threadsanitizer.conf
@@ -1,15 +1,15 @@
-# race:ParseOSMData
-# race:PrepareNodes
-# race:InternalExtractorEdge
-# race:DynamicGraph
-# race:GenerateEdgeExpandedEdges
-# race:ReleaseOsmNodes
-# race:LoadDataFromFile
-# race:osrm::Alias
-# race:SortableEdgeWithData
-# race:StaticRTree
-# race:ConcurrentIDMap
-# race:ContractorNodeData::Renumber
-# race:Extractor::run
-# race:annotateTurns
+race:ParseOSMData
+race:PrepareNodes
+race:InternalExtractorEdge
+race:DynamicGraph
+race:GenerateEdgeExpandedEdges
+race:ReleaseOsmNodes
+race:LoadDataFromFile
+race:osrm::Alias
+race:SortableEdgeWithData
+race:StaticRTree
+race:ConcurrentIDMap
+race:ContractorNodeData::Renumber
+race:Extractor::run
+race:annotateTurns
 race:~concrete_filter
