--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -34,8 +34,8 @@ jobs:
   #           --volume "${PWD}/artifacts:/artifacts"
   #         githubToken: ${{ github.token }}
   #         install: |
-  #           apt-get update -y && apt-get install -y python3 python3-pip nodejs npm cmake build-essential
-  #           pip3 install conan==1.53.0
+            # apt-get update -y && apt-get install -y python3 python3-pip nodejs npm cmake build-essential
+            # pip3 install conan==1.53.0
   #         run: |
   #           npm install --ignore-scripts
   #           npm link --ignore-scripts
@@ -671,7 +671,10 @@ jobs:
     - name: Build and install OSRM
       run: |
         mkdir build
-        docker run -v "${PWD}:/work" -t dockcross/linux-arm64-lts cmake -Bbuild -S. -GNinja -DCMAKE_BUILD_TYPE=Release -DENABLE_NODE_BINDINGS=ON
+        docker run bash -c "apt-get update -y && apt-get install -y python3 python3-pip nodejs npm"
+        #apt-get update -y && apt-get install -y python3 python3-pip nodejs npm cmake build-essential
+        docker run bash -c "pip3 install conan==1.53.0"
+        docker run -v "${PWD}:/work" -t dockcross/linux-arm64-lts cmake -Bbuild -S. -GNinja -DENABLE_CONAN=ON -DCMAKE_BUILD_TYPE=Release -DENABLE_NODE_BINDINGS=ON
         docker run -v "${PWD}:/work" -t dockcross/linux-arm64-lts ninja
     - name: Build example
       if: ${{ matrix.NODE_PACKAGE_TESTS_ONLY != 'ON' && matrix.ENABLE_APPLE_SILICON != 'ON' }}
