--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -672,7 +672,7 @@ jobs:
       run: |
         mkdir build
         docker build -t my_cool_image .                   ## Builds the dockcross image.
-        docker run my_cool_image > linux-armv7                ## Creates a helper script named linux-armv7.
+        #docker run my_cool_image > linux-armv7                ## Creates a helper script named linux-armv7.
         chmod +x linux-armv7                          ## Gives the script execution permission.
         ./linux-armv7 --image my_cool_image cmake -Bbuild -S. -GNinja -DENABLE_CONAN=ON -DCMAKE_BUILD_TYPE=Release -DENABLE_NODE_BINDINGS=ON
         ./linux-armv7 ninja
