--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -673,6 +673,7 @@ jobs:
         mkdir build
         docker build -t my_cool_image .                   ## Builds the dockcross image.
         #docker run my_cool_image > linux-armv7                ## Creates a helper script named linux-armv7.
+        export OCI_EXE=docker
         chmod +x linux-armv7                          ## Gives the script execution permission.
         ./linux-armv7 --image my_cool_image cmake -Bbuild -S. -GNinja -DENABLE_CONAN=ON -DCMAKE_BUILD_TYPE=Release -DENABLE_NODE_BINDINGS=ON
         ./linux-armv7 ninja
